# AP1Ex4

./: AStar.cpp  AStar.h  AStarComperator.cpp  AStarComperator.h  AlgorithemsTesting.cpp  AlgorithemsTesting.h  Astar.txt  BFS.txt  BestFirstSearch.cpp  BestFirstSearch.h  BestFirstSearch.txt  BestFirstSearchComperator.cpp  BestFirstSearchComperator.h  BreadthFirstSearch.cpp  BreadthFirstSearch.h  CMakeLists.txt  CacheManager.cpp  CacheManager.h  ClientHandler.cpp  ClientHandler.h  DFS.txt  DepthFirstSearch.cpp  DepthFirstSearch.h  FileCacheManager.cpp  FileCacheManager.h  ISearcher.cpp  ISearcher.h  IShearcher.cpp  IShearcher.h  Main.cpp  Main.h  Makefile  Matrix.cpp  Matrix.h  Matrixes  MyParallelServer.h  MySerialServer.cpp  MySerialServer.h  MyTestClientHandler.cpp  MyTestClientHandler.h  (+27 more)
